--- a/_site.yml
+++ b/_site.yml
@@ -21,4 +21,4 @@ navbar:
           href: ./tidytuesday_exercise.html
   right:
     - icon: fab fa-github 
-      href: URL-TO-THIS-REPOSITORY-HERE        
+      href: http://wadefields.me/WADEFIELDS-MADA-portfolio/        
